syntax = "proto3";

package hostconfig;
option go_package = "gen/go/hostconfig; hostconfig";

import "google/api/annotations.proto";

service HostConfig {
    rpc ChangeHostname (ChangeHostnameRequest) returns (ChangeHostnameResponse) {
        option (google.api.http) = {
            post: "/hostname"
            body: "*"
        };
    }

    rpc ListDNSServers (ListDNSServersRequest) returns (ListDNSServersResponse) {
        option (google.api.http) = {
            get: "/dns"
        };
    }

    rpc AddDNSServer (AddDNSServerRequest) returns (AddDNSServerResponse) {
        option (google.api.http) = {
            post: "/dns/add"
            body: "*"
        };
    }

    rpc RemoveDNSServer (RemoveDNSServerRequest) returns (RemoveDNSServerResponse) {
        option (google.api.http) = {
            delete: "/dns/remove"
            body: "*"
        };
    }
}

message ChangeHostnameRequest {
    string name = 1;
}

message ChangeHostnameResponse {
    bool status = 1;
    string newName = 2;
}

message ListDNSServersRequest {}

message ListDNSServersResponse {
    repeated string dnsServers = 1;
}

message AddDNSServerRequest {
    string dnsServer = 1;
}

message AddDNSServerResponse {
    bool status = 1;
}

message RemoveDNSServerRequest {
    string dnsServer = 1;
}

message RemoveDNSServerResponse {
    bool status = 1;
    repeated string dnsServers = 2;
}